--- a/winXP.css
+++ b/winXP.css
@@ -24,7 +24,7 @@ html {
  	font-family: 'Encode Sans Expanded', sans-serif;
  	font-family: 'Lato', sans-serif;
  	font-family: 'Cairo', sans-serif;
-	color: white;
+	color: light-dark(white, rgb(203,203,203));
 }
 body, html, div{
 	margin: 0;
@@ -52,6 +52,8 @@ html, body, #winXP {
 	overflow: hidden;
 	text-transform: capitalize;
 	color: black;
+	color: light-dark(black, transparent);
+	text-shadow: 0 0 light-dark(transparent, black);
 	/*padding: 0 5px;*/
 	font-size: 14px;
 	/*font-weight: 300;*/
@@ -60,7 +62,7 @@ html, body, #winXP {
 
 #winXP .icon img:hover + .icon-name, #winXP .icon .icon-name:hover{
 	text-decoration: underline;
-	color:white;
+	color:light-dark(white, rgb(203,203,203));;
 }
 
 #winXP .icon img{
@@ -118,12 +120,13 @@ html, body, #winXP {
  	border-radius: 0 8px 22px 0;
  	border-right: 1px solid  #1e661e;
  
- 	color:white;
+ 	color:light-dark(white, rgb(203,203,203));
+ 	color:light-dark(white, transparent);
  	font-style: italic;
  	font-size: 25px;
 
  	font-weight: bold;
- 	text-shadow: 2px 2px #226424;
+ 	text-shadow: 0 0 white, 2px 2px #226424;
  	padding-left: 45px;
  	line-height: 40px;
  	cursor:pointer;
@@ -175,8 +178,8 @@ html, body, #winXP {
 	top:0;
 	cursor:default;
 	background:
-		linear-gradient(to bottom, transparent -20%, rgba(255,255,255,0.5) 4%, rgba(255,255,255,0.0) 18%),
-		linear-gradient(to top, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.0) 50%);
+		linear-gradient(to bottom, transparent -20%, rgba(203,203,203,0.5) 4%, rgba(203,203,203,0.0) 18%),
+		linear-gradient(to top, rgba(203,203,203,0.2) 0%, rgba(203,203,203,0.0) 50%);
 
 
 }
@@ -197,15 +200,15 @@ html, body, #winXP {
 	margin-left: 67px;
 	font-size: 20px;
 	position: absolute;
-	color: white;
+	color: light-dark(white, transparent);
 	font-weight: bold;
-  	text-shadow: 2px 2px #000000;
+  	text-shadow: 0 0 white, 2px 2px #000000;
 }
 
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel {
 	
 	width: 100%;
-	background: white;
+	background: light-dark(white, rgb(203,203,203));;
 	position: absolute;
 	top:60px;
 	bottom: 0;
@@ -216,23 +219,35 @@ html, body, #winXP {
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel{
 	
 	width: 50%;
-	background: light-dark(white, #0072ff);
+	background: light-dark(white, rgb(203,203,203));
+	background: transparent;
 	position: absolute;
 	left: 0px;
 	height: 100%;
-	cursor: pointer;
+}
+
+#winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel canvas{
+	
+	width: 100%;
+	background: light-dark(white, rgb(203,203,203));
+	background: transparent;
+	position: absolute;
+	left: 0px;
+	height: 100%;
 }
 
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel .start-menu-icon{
 
 	height: 50px;
 	color:black;
+	color:light-dark(black, transparent);
+	text-shadow: 0 0 light-dark(transparent, black);
 }
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel .start-menu-icon:hover{
 	/*background: #7f8180;
 	background: #C0C0C0;
 	background: #0D98EE;*/
-	color: gray;
+	cursor: pointer;
 	
 }
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel .start-menu-icon img{
@@ -245,8 +260,14 @@ html, body, #winXP {
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel .start-menu-icon div{
 	position: absolute;
 	left: 45px;
-	margin-top: 6px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-right: 100px;
 	text-transform: capitalize;
+}
+#winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownLeftPanel .start-menu-icon div:hover{
+	text-decoration: underline;
+	color: blue;
 }
 
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownRightPanel{
@@ -282,7 +303,8 @@ html, body, #winXP {
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownRightPanel .socialLink a:link,
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownRightPanel .socialLink a:visited {
 	
-	color:black;
+	color: light-dark(black, transparent);
+	text-shadow: 0 0 light-dark(transparent, black);
 
 }
 
@@ -293,13 +315,14 @@ html, body, #winXP {
 
 
 #winXP #taskbar #startMenuDropDown #startMenuDropDownPanel #startMenuDropDownRightPanel .socialLink a:active{
-	color: white;
+	color: light-dark(white, rgb(203,203,203));
 }
 
 #winXP #taskbar #taskbar-clock{
 	position: relative;
 	background: #0D98EE;
-	color: white;
+	color: light-dark(white, transparent);
+	text-shadow: 0 0 light-dark(transparent, white);
 	height: 100%;
 	line-height: 42px;
 
@@ -333,7 +356,7 @@ html, body, #winXP {
 	border-radius: 5px;
 	flex-basis: 150px;
 	z-index: 44;
-	color:rgba(255,255,255,0.8);
+	color:rgba(203,203,203,0.8);
 	font-size: 15px;
 	background-repeat: no-repeat;
 	text-transform: capitalize;
@@ -344,21 +367,21 @@ html, body, #winXP {
 	background-color: #3880F6;
 	background-image:linear-gradient(
 		to bottom,
-		rgba(255,255,255,0) -20%,
-		rgba(255,255,255,0.3) 5%,
-		rgba(255,255,255,0) 10%,
-		rgba(255,255,255,0) 60%,
-		rgba(255,255,255,0.2) 98%,
-		rgba(255,255,255,0) 120%
+		rgba(203,203,203,0) -20%,
+		rgba(203,203,203,0.3) 5%,
+		rgba(203,203,203,0) 10%,
+		rgba(203,203,203,0) 60%,
+		rgba(203,203,203,0.2) 98%,
+		rgba(203,203,203,0) 120%
 	);
 	background-image:linear-gradient(
 		to bottom,
-		rgba(255,255,255,0) -20%,
-		rgba(255,255,255,0.3) 10%,
-		rgba(255,255,255,0) 25%,
-		rgba(255,255,255,0) 60%,
-		rgba(255,255,255,0.2) 90%,
-		rgba(255,255,255,0) 120%
+		rgba(203,203,203,0) -20%,
+		rgba(203,203,203,0.3) 10%,
+		rgba(203,203,203,0) 25%,
+		rgba(203,203,203,0) 60%,
+		rgba(203,203,203,0.2) 90%,
+		rgba(203,203,203,0) 120%
 	);
 	position: relative;
 	width: 100%;
@@ -388,26 +411,28 @@ html, body, #winXP {
 
 #winXP #taskbar #sub-taskbar #taskbar-icon-container #taskbar-icons .taskbar-item.focused {
 	font-weight: 800;
-	color: white;
+	color: light-dark(white, transparent);
+	text-shadow: 0 0 light-dark(transparent, white);
 	background-color: #3a77ff;
+
 
 	background-image:linear-gradient(
 		to bottom,
-		rgba(255,255,255,0) -20%,
-		rgba(255,255,255,0.3) 15%,
-		rgba(255,255,255,0) 30%,
-		rgba(255,255,255,0) 60%,
-		rgba(255,255,255,0.2) 80%,
-		rgba(255,255,255,0) 120%
+		rgba(203,203,203,0) -20%,
+		rgba(203,203,203,0.3) 15%,
+		rgba(203,203,203,0) 30%,
+		rgba(203,203,203,0) 60%,
+		rgba(203,203,203,0.2) 80%,
+		rgba(203,203,203,0) 120%
 	);
 	background-image:linear-gradient(
 		to bottom,
-		rgba(255,255,255,0) -20%,
-		rgba(255,255,255,0.3) 5%,
-		rgba(255,255,255,0) 10%,
-		rgba(255,255,255,0) 60%,
-		rgba(255,255,255,0.2) 98%,
-		rgba(255,255,255,0) 120%
+		rgba(203,203,203,0) -20%,
+		rgba(203,203,203,0.3) 5%,
+		rgba(203,203,203,0) 10%,
+		rgba(203,203,203,0) 60%,
+		rgba(203,203,203,0.2) 98%,
+		rgba(203,203,203,0) 120%
 	);
 	box-shadow: none;
 	box-shadow: 1px 0px 1px #5252ff;
@@ -423,8 +448,8 @@ html, body, #winXP {
  	height: 100%;
  	width: 100%;
 	background:
-		linear-gradient(to bottom, transparent -20%, rgba(255,255,255,0.5) 6.25%, rgba(255,255,255,0.0) 23.3%),
-		linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.0) 30%);
+		linear-gradient(to bottom, transparent -20%, rgba(203,203,203,0.5) 6.25%, rgba(203,203,203,0.0) 23.3%),
+		linear-gradient(to top, rgba(203,203,203,0.1) 0%, rgba(203,203,203,0.0) 30%);
 
 }
 
@@ -470,7 +495,7 @@ html, body, #winXP {
 	/*padding-top: 7px;*/
 	text-transform: capitalize;
 	font-weight: 300;
-	color: rgba(255,255,255,0.8);
+	color: rgba(203,203,203,0.8);
 	/*background-color: #3a77ff;*/
 }
 
@@ -479,7 +504,18 @@ html, body, #winXP {
 	height: 25px;
 	width: 100%;
 	background: #ece9d8;
-	color: black;
+	background: transparent;
+	color: light-dark(black, transparent);
+	text-shadow: 0 0 light-dark(transparent, black);
+}
+
+
+.window .window-menu > canvas {
+	position: absolute;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 25px;
 }
 
 .window .window-menu .sub-menu {
@@ -494,6 +530,14 @@ html, body, #winXP {
 	color: gray;
 	cursor: pointer;
 }
+.window .window-menu .sub-menu canvas {
+	position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: -1;
+}
 
 .window .window-menu .drop-down-menu{
 	background: #ece9d8;
@@ -505,7 +549,8 @@ html, body, #winXP {
 	top:50px;
 	left:0px;
 
-	color: black;
+	color: light-dark(black, transparent);
+	text-shadow: 0 0 light-dark(transparent, black);
 	z-index: 50;
 
 }
@@ -543,7 +588,7 @@ html, body, #winXP {
 	height: 20px;
 	width: 20px;
 	flex-basis: 20px;
-	border: 1.5px solid white;
+	border: 1.5px solid light-dark(white, rgb(203,203,203));
 	border-radius: 3px;
 	overflow: hidden;
 	z-index: 5;
@@ -577,7 +622,7 @@ html, body, #winXP {
 
 .window.focused .window-sub-header{
 
-	color:white;
+	color: light-dark(white, rgb(203,203,203));
 	font-weight: 800;
 	
 }
