--- a/games/tetris/tetris.css
+++ b/games/tetris/tetris.css
@@ -49,6 +49,7 @@
 	height: 400px;
 	background: white;
 	background: #ff5a5a;
+	background: #17b2bb85;
 	width: 120px;
 	color: white;
 	line-height: 21px;
