Social Media + Worms -preload

--- a/winXP.css
+++ b/winXP.css
@@ -292,6 +292,7 @@ html, body, #winXP {
 	background-size: 25px;
 	background-repeat: no-repeat;
 	background-position: 5px 0px;
+	height: 40px;
 
 }
 
