--- a/winXP.css
+++ b/winXP.css
@@ -38,11 +38,63 @@ html, body, #winXP {
  	height: 100%;
 }
 
-#winXP{
-	
-	
-	/*background-size: auto 100%;*/
+#loaderScreen{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: black;
+    z-index: 1000;
+}
 
+
+#loaderFrame{
+	height: 20px;
+	width: 140px;
+	border: 1px solid white;
+	border-radius: 4px;
+	position: fixed;
+	left: 50%;
+	top: calc(50% + 150px);
+	overflow: hidden;	
+	transform: translate(-50%,0%);
+}
+
+.loaderFloat{
+	height: 16px;
+	width: 10px;
+	float: left;
+	background: white;
+	margin: 2px 0 0 5px;
+	box-shadow: inset 0 0 12px blue;
+	position: relative;
+	left: -50px;
+	animation: floatRight 2s linear infinite;
+}
+
+@keyframes floatRight{
+	100%{
+		left: +150px;
+	}
+}
+
+.fadeLoader{
+	opacity: 1;
+	animation: fadeLoader 1s ease-in-out forwards .2s;
+}
+
+@keyframes fadeLoader{
+	0%{
+		opacity: 1;	
+	}
+	100%{
+		opacity: -1;
+		z-index: -1000;
+	}
+}
+
+
+#winXP{
+	/*background-size: auto 100%;*/
     background-position-y: center;
 }
 
@@ -636,9 +688,7 @@ html, body, #winXP {
 	
 }
 .window .minimize-button {
-	
 	background-image: url('images/minimize.ico');
-
 }
 
 .window .button > div{
